bindings/unity/Runtime/Native/xybrid.h

/*
 Opaque handle to a model loader.

 This handle is created by `xybrid_model_loader_from_registry`,
 `xybrid_model_loader_from_bundle`, or `xybrid_model_loader_from_directory`
 and must be freed with `xybrid_model_loader_free`.
 */
typedef struct XybridModelLoaderHandle {
  void *_0;
} XybridModelLoaderHandle;
/*
 Opaque handle to a loaded model.

 This handle is created by `xybrid_model_loader_load` and must be
 freed with `xybrid_model_free`.
 */
typedef struct XybridModelHandle {
  void *_0;
} XybridModelHandle;
/*
 Opaque handle to an envelope (input data).

 This handle is created by `xybrid_envelope_audio` or `xybrid_envelope_text`
 and must be freed with `xybrid_envelope_free`.
 */
typedef struct XybridEnvelopeHandle {
  void *_0;
} XybridEnvelopeHandle;
/*
 Initialize the xybrid library.

 This function should be called once before using any other xybrid functions.
 Currently this is a no-op but may perform initialization in the future.

 # Returns

 - `0` on success
 - Non-zero on failure (check `xybrid_last_error()` for details)

 # Example (C)

 ```c
 if (xybrid_init() != 0) {
     const char* error = xybrid_last_error();
     fprintf(stderr, "Failed to initialize: %s\n", error);
     return 1;
 }
 ```
 */
int32_t xybrid_init(void);
/*
 Get the library version string.

 Returns a pointer to a null-terminated string containing the library version.
 The returned pointer is valid for the lifetime of the library and should NOT
 be freed by the caller.

 # Returns

 A pointer to a static null-terminated version string, or null on error.

 # Example (C)

 ```c
 const char* version = xybrid_version();
 printf("xybrid version: %s\n", version);
 ```
 */
const char *xybrid_version(void);
/*
 Get the last error message.

 Returns a pointer to a null-terminated string containing the last error
 message, or null if no error has occurred. The returned pointer is valid
 until the next xybrid function call on the same thread.

 # Returns

 A pointer to the last error message, or null if no error.

 # Example (C)

 ```c
 XybridModelHandle* model = xybrid_model_loader_load(loader);
 if (model == NULL) {
     const char* error = xybrid_last_error();
     fprintf(stderr, "Failed to load: %s\n", error ? error : "unknown error");
 }
 ```
 */
const char *xybrid_last_error(void);
/*
 Free a string allocated by the library.

 This function should be called to free strings returned by xybrid functions
 that specify the caller must free the result. Do NOT use this to free
 strings returned by `xybrid_version()` or `xybrid_last_error()`.

 # Safety

 The pointer must be a valid pointer to a string allocated by xybrid,
 or null. Passing an invalid pointer causes undefined behavior.

 # Example (C)

 ```c
 char* model_id = xybrid_model_id(model);
 printf("Model: %s\n", model_id);
 xybrid_free_string(model_id);
 ```
 */
void xybrid_free_string(char *s);
/*
 Create a model loader from a registry model ID.

 This creates a loader that will fetch the model from the xybrid registry
 when `xybrid_model_loader_load` is called.

 # Parameters

 - `model_id`: A null-terminated string containing the model ID (e.g., "kokoro-82m").

 # Returns

 A handle to the model loader, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelLoaderHandle* loader = xybrid_model_loader_from_registry("kokoro-82m");
 if (loader == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use loader...
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelLoaderHandle *xybrid_model_loader_from_registry(const char *model_id);
/*
 Create a model loader from a local bundle path.

 This creates a loader that will load the model from the specified local path
 when `xybrid_model_loader_load` is called.

 # Parameters

 - `path`: A null-terminated string containing the path to the model bundle.

 # Returns

 A handle to the model loader, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelLoaderHandle* loader = xybrid_model_loader_from_bundle("/path/to/model");
 if (loader == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use loader...
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelLoaderHandle *xybrid_model_loader_from_bundle(const char *path);
/*
 Load a model using the loader.

 This function loads the model from the registry, local bundle, or directory,
 depending on how the loader was created.

 # Parameters

 - `handle`: A handle to the model loader created by `xybrid_model_loader_from_registry`,
   `xybrid_model_loader_from_bundle`, or `xybrid_model_loader_from_directory`.

 # Returns

 A handle to the loaded model, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridModelHandle* model = xybrid_model_loader_load(loader);
 if (model == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     xybrid_model_loader_free(loader);
     return 1;
 }
 // Use model...
 xybrid_model_free(model);
 xybrid_model_loader_free(loader);
 ```
 */
struct XybridModelHandle *xybrid_model_loader_load(struct XybridModelLoaderHandle *handle);
/*
 Free a model loader handle.

 This function frees the memory associated with a model loader handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the model loader to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_model_loader_free(loader);
 loader = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_model_loader_free(struct XybridModelLoaderHandle *handle);
 XybridEnvelopeHandle* envelope = xybrid_envelope_audio(
     audio_data, sizeof(audio_data), 16000, 1);
 if (envelope == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use envelope...
 xybrid_envelope_free(envelope);
 ```
 */
struct XybridEnvelopeHandle *xybrid_envelope_audio(const uint8_t *bytes,
                                                   uintptr_t len,
                                                   uint32_t sample_rate,
                                                   uint32_t channels);
/*
 Create an envelope containing text data.

 This function creates an envelope containing text for TTS or LLM inference.

 # Parameters

 - `text`: A null-terminated string containing the text. Must not be null.

 # Returns

 A handle to the envelope, or null on failure.
 On failure, call `xybrid_last_error()` to get the error message.

 # Example (C)

 ```c
 XybridEnvelopeHandle* envelope = xybrid_envelope_text("Hello, world!");
 if (envelope == NULL) {
     fprintf(stderr, "Failed: %s\n", xybrid_last_error());
     return 1;
 }
 // Use envelope...
 xybrid_envelope_free(envelope);
 ```
 */
struct XybridEnvelopeHandle *xybrid_envelope_text(const char *text);
/*
 Free an envelope handle.

 This function frees the memory associated with an envelope handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the envelope to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_envelope_free(envelope);
 envelope = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_envelope_free(struct XybridEnvelopeHandle *handle);
/*
 Get the model ID of a loaded model.

 Returns a pointer to a null-terminated string containing the model ID.
 The caller is responsible for freeing the returned string using
 `xybrid_free_string()`.

 # Parameters

 - `model`: A handle to the loaded model.

 # Returns

 A pointer to a null-terminated string containing the model ID,
 or null on failure. The caller must free this string with `xybrid_free_string()`.

 # Example (C)

 ```c
 char* model_id = xybrid_model_id(model);
 if (model_id != NULL) {
     printf("Model ID: %s\n", model_id);
     xybrid_free_string(model_id);
 }
 ```
 */
char *xybrid_model_id(struct XybridModelHandle *model);
/*
 Free a model handle.

 This function frees the memory associated with a model handle.
 After calling this function, the handle is no longer valid.

 # Parameters

 - `handle`: A handle to the model to free. May be null (no-op).

 # Example (C)

 ```c
 xybrid_model_free(model);
 model = NULL; // Good practice: null out after freeing
 ```
 */
void xybrid_model_free(struct XybridModelHandle *handle);