bindings/unity/Runtime/Native/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Xybrid.Native
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "xybrid_ffi";



        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void xybrid_model_run_streaming_callback_delegate(byte* token, long token_id, uint index, byte* cumulative_text, byte* finish_reason, void* user_data);

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        internal delegate void xybrid_model_run_streaming_with_context_callback_delegate(byte* token, long token_id, uint index, byte* cumulative_text, byte* finish_reason, void* user_data);



        /// <summary>
        ///  Initialize the xybrid library.
        ///
        ///  This function should be called once before using any other xybrid functions.
        ///  Currently this is a no-op but may perform initialization in the future.
        ///
        ///  # Returns
        ///
        ///  - `0` on success
        ///  - Non-zero on failure (check `xybrid_last_error()` for details)
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  if (xybrid_init() != 0) {
        ///      const char* error = xybrid_last_error();
        ///      fprintf(stderr, "Failed to initialize: %s\n", error);
        ///      return 1;
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_init", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int xybrid_init();

        /// <summary>
        ///  Get the library version string.
        ///
        ///  Returns a pointer to a null-terminated string containing the library version.
        ///  The returned pointer is valid for the lifetime of the library and should NOT
        ///  be freed by the caller.
        ///
        ///  # Returns
        ///
        ///  A pointer to a static null-terminated version string, or null on error.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  const char* version = xybrid_version();
        ///  printf("xybrid version: %s\n", version);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* xybrid_version();

        /// <summary>
        ///  Get the last error message.
        ///
        ///  Returns a pointer to a null-terminated string containing the last error
        ///  message, or null if no error has occurred. The returned pointer is valid
        ///  until the next xybrid function call on the same thread.
        ///
        ///  # Returns
        ///
        ///  A pointer to the last error message, or null if no error.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  XybridModelHandle* model = xybrid_model_loader_load(loader);
        ///  if (model == NULL) {
        ///      const char* error = xybrid_last_error();
        ///      fprintf(stderr, "Failed to load: %s\n", error ? error : "unknown error");
        ///  }
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_last_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* xybrid_last_error();

        /// <summary>
        ///  Free a string allocated by the library.
        ///
        ///  This function should be called to free strings returned by xybrid functions
        ///  that specify the caller must free the result. Do NOT use this to free
        ///  strings returned by `xybrid_version()` or `xybrid_last_error()`.
        ///
        ///  # Safety
        ///
        ///  The pointer must be a valid pointer to a string allocated by xybrid,
        ///  or null. Passing an invalid pointer causes undefined behavior.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  char* model_id = xybrid_model_id(model);
        ///  printf("Model: %s\n", model_id);
        ///  xybrid_free_string(model_id);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_free_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void xybrid_free_string(byte* s);

        /// <summary>
        ///  Create a model loader from a registry model ID.
        ///
        ///  This creates a loader that will fetch the model from the xybrid registry
        ///  when `xybrid_model_loader_load` is called.
        ///
        ///  # Parameters
        ///
        ///  - `model_id`: A null-terminated string containing the model ID (e.g., "kokoro-82m").
        ///
        ///  # Returns
        ///
        ///  A handle to the model loader, or null on failure.
        ///  On failure, call `xybrid_last_error()` to get the error message.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  XybridModelLoaderHandle* loader = xybrid_model_loader_from_registry("kokoro-82m");
        ///  if (loader == NULL) {
        ///      fprintf(stderr, "Failed: %s\n", xybrid_last_error());
        ///      return 1;
        ///  }
        ///  // Use loader...
        ///  xybrid_model_loader_free(loader);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_loader_from_registry", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern XybridModelLoaderHandle* xybrid_model_loader_from_registry(byte* model_id);

        /// <summary>
        ///  Create a model loader from a local bundle path.
        ///
        ///  This creates a loader that will load the model from the specified local path
        ///  when `xybrid_model_loader_load` is called.
        ///
        ///  # Parameters
        ///
        ///  - `path`: A null-terminated string containing the path to the model bundle.
        ///
        ///  # Returns
        ///
        ///  A handle to the model loader, or null on failure.
        ///  On failure, call `xybrid_last_error()` to get the error message.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  XybridModelLoaderHandle* loader = xybrid_model_loader_from_bundle("/path/to/model");
        ///  if (loader == NULL) {
        ///      fprintf(stderr, "Failed: %s\n", xybrid_last_error());
        ///      return 1;
        ///  }
        ///  // Use loader...
        ///  xybrid_model_loader_free(loader);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_loader_from_bundle", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern XybridModelLoaderHandle* xybrid_model_loader_from_bundle(byte* path);

        /// <summary>
        ///  Load a model using the loader.
        ///
        ///  This function loads the model from the registry or local bundle,
        ///  depending on how the loader was created.
        ///
        ///  # Parameters
        ///
        ///  - `handle`: A handle to the model loader created by `xybrid_model_loader_from_registry`
        ///    or `xybrid_model_loader_from_bundle`.
        ///
        ///  # Returns
        ///
        ///  A handle to the loaded model, or null on failure.
        ///  On failure, call `xybrid_last_error()` to get the error message.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  XybridModelHandle* model = xybrid_model_loader_load(loader);
        ///  if (model == NULL) {
        ///      fprintf(stderr, "Failed: %s\n", xybrid_last_error());
        ///      xybrid_model_loader_free(loader);
        ///      return 1;
        ///  }
        ///  // Use model...
        ///  xybrid_model_free(model);
        ///  xybrid_model_loader_free(loader);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_loader_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern XybridModelHandle* xybrid_model_loader_load(XybridModelLoaderHandle* handle);

        /// <summary>
        ///  Free a model loader handle.
        ///
        ///  This function frees the memory associated with a model loader handle.
        ///  After calling this function, the handle is no longer valid.
        ///
        ///  # Parameters
        ///
        ///  - `handle`: A handle to the model loader to free. May be null (no-op).
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  xybrid_model_loader_free(loader);
        ///  loader = NULL; // Good practice: null out after freeing
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_model_loader_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void xybrid_model_loader_free(XybridModelLoaderHandle* handle);

        /// <summary>
        ///  Create an envelope containing audio data.
        ///
        ///  This function creates an envelope containing raw audio bytes with the
        ///  specified sample rate and channel count.
        ///
        ///  # Parameters
        ///
        ///  - `bytes`: Pointer to the raw audio bytes. May be null if `len` is 0.
        ///  - `len`: Length of the audio bytes array.
        ///  - `sample_rate`: Sample rate in Hz (e.g., 16000 for 16kHz).
        ///  - `channels`: Number of audio channels (e.g., 1 for mono, 2 for stereo).
        ///
        ///  # Returns
        ///
        ///  A handle to the envelope, or null on failure.
        ///  On failure, call `xybrid_last_error()` to get the error message.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  uint8_t audio_data[] = { /* PCM audio bytes */ };
        ///  XybridEnvelopeHandle* envelope = xybrid_envelope_audio(
        ///      audio_data, sizeof(audio_data), 16000, 1);
        ///  if (envelope == NULL) {
        ///      fprintf(stderr, "Failed: %s\n", xybrid_last_error());
        ///      return 1;
        ///  }
        ///  // Use envelope...
        ///  xybrid_envelope_free(envelope);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_envelope_audio", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern XybridEnvelopeHandle* xybrid_envelope_audio(byte* bytes, nuint len, uint sample_rate, uint channels);

        /// <summary>
        ///  Create an envelope containing text data.
        ///
        ///  This function creates an envelope containing text for TTS or LLM inference.
        ///
        ///  # Parameters
        ///
        ///  - `text`: A null-terminated string containing the text. Must not be null.
        ///
        ///  # Returns
        ///
        ///  A handle to the envelope, or null on failure.
        ///  On failure, call `xybrid_last_error()` to get the error message.
        ///
        ///  # Example (C)
        ///
        ///  ```c
        ///  XybridEnvelopeHandle* envelope = xybrid_envelope_text("Hello, world!");
        ///  if (envelope == NULL) {
        ///      fprintf(stderr, "Failed: %s\n", xybrid_last_error());
        ///      return 1;
        ///  }
        ///  // Use envelope...
        ///  xybrid_envelope_free(envelope);
        ///  ```
        /// </summary>
        [DllImport(__DllName, EntryPoint = "xybrid_envelope_text", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern XybridEnvelopeHandle* xybrid_envelope_text(byte* text);
